--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "lodash": "^4.13.1",
     "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
-    "moment": "2.x.x",
+    "moment": "^2.19.3",
     "morgan": "1.x.x",
     "mssql": "^3.0.0",
     "mysql": "2.x.x",
